manifests/spo-backend/kubernates/overlay/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spo-backend-ing
  namespace: spo
spec:
  rules:
    - host: api-spo.pea.co.th
  tls:
    - hosts:
        - api-spo.pea.co.th
